--- a/123.css
+++ b/123.css
@@ -21,9 +21,18 @@ h3 {
     padding-left: 20px;
     font-size: 16pt;
     color: blue;
+    text-shadow: green 1px 0 10px;
 }
 .paragraph-3 {
     font-weight: bold;
     font-size: 22px;
     font-family: Arial;
+    text-shadow: green 1px 0 10px;
+}
+
+.paragraph-4 {
+    font-size: 24px;
+    font-style: italic;
+    text-shadow: green 1px 0 10px;
+
 }
